EIS 서브도메인 적용
링크를 고침.
eis.cshians.net/examinfo -> 에러 안남
cshians.net/exam/examinfo -> 폼이 이상하게 보임

--- a/login/2016gradecut/index.html
+++ b/login/2016gradecut/index.html
@@ -124,7 +124,7 @@ xe.msg_select_menu = "대상 메뉴 선택";
                     <div class="register" style="text-align:center; color:#275D0C; vertical-align:middle;">
                         <p style="text-align:center; font-size:15px; font-family:Dotum,돋움,Helvetica,Arial,sans-serif;"><!-- 공백을 어떻게 넣는지 까먹어서 그냥 문단 하나 만듦. <br>로는 안먹더군요. -->&nbsp;</p>
                         <p style="font-size:20px; font-family:Dotum,돋움,Helvetica,Arial,sans-serif; margin-top:-55px;"><br><strong>1학기 등급컷 계산기가 오픈되었습니다.</strong></p>
-                        <p style="text-align:center; font-size:15px; font-family:Dotum,돋움,Helvetica,Arial,sans-serif; margin-top:-20px;">모두 시험 잘 보셨기를 바랍니다. <a href="http://cshians.net/exam/examinfo/">계산기 바로가기</a></p>
+                        <p style="text-align:center; font-size:15px; font-family:Dotum,돋움,Helvetica,Arial,sans-serif; margin-top:-20px;">모두 시험 잘 보셨기를 바랍니다. <a href="http://eis.cshians.net/examinfo/">계산기 바로가기</a></p>
                         <!-- 아 드디어 다했다 -->
                     </div></div></div></div>
         <div id="linksModalBG" style="opacity: 0.75; height: 540px; display: none;"></div>
