--- a/circles/academic/key.east/projects/index.html
+++ b/circles/academic/key.east/projects/index.html
@@ -37,13 +37,13 @@
 		<h2>진행 중인 프로젝트</h2>
 
 		<h3>커뮤니티 서비스 CSHians</h3>
-		<p>키이스트의 대표 프로젝트인 <a href="http://cshians.net" style="color:black">CSHians</a> 개발은 2015년 11월부터 진행되었으며, 현재 안정적으로 운영되고 있습니다. 추후 여러 가지 API를 기반으로 한 정보 제공 시스템, 웹메일서비스, 자료실 시스템 등을 추가할 예정입니다. 웹 개발 트랙 소속입니다.</p><br><br>
+		<p>키이스트의 대표 프로젝트인 <a href="http://cshians.net" style="color:black">CSHians</a> 개발은 2015년 11월부터 진행되었으며, 현재 안정적으로 운영되고 있습니다. 추후 여러 가지 API를 기반으로 한 정보 제공 시스템, 웹메일서비스, 자료실 시스템 등을 추가할 예정입니다. 웹 개발 트랙 소속입니다.</p><br>
 
 		<h3>CSHS CircleNet</h3>
-		<p>키이스트가 개발한 동아리 네트워크인 <a href="http://cshians.net/circles" style="color:black">CSHS CircleNet</a> 개발은 2016년 7월부터 진행되었으며, 현재 개발 중입니다. 추후 동아리별 홈페이지 및 내부전산망 구축이 예정되어 있습니다. 웹 개발 트랙 소속입니다.</p><br><br>
+		<p>키이스트가 개발한 동아리 네트워크인 <a href="http://cnet.cshians.net" style="color:black">CSHS CircleNet</a> 개발은 2016년 7월부터 진행되었으며, 현재 개발 중입니다. 추후 동아리별 홈페이지 및 내부전산망 구축이 예정되어 있습니다. 웹 개발 트랙 소속입니다.</p><br>
 
 		<h3>CSHS-EIS</h3>
-		<p>키이스트가 개발한 평가정보시스템인 <a href="http://cshians.net/exam" style="color:black">CSHS-EIS</a> 개발은 2016년 7월부터 진행되었으며, 현재 개발 중입니다. 추후 실시간 등급컷 추정 시스템 및 시험별 전략 제공 기능 제공이 예정되어 있습니다. 웹 개발 트랙 소속입니다.</p><br><br>
+		<p>키이스트가 개발한 평가정보시스템인 <a href="http://eis.cshians.net" style="color:black">CSHS-EIS</a> 개발은 2016년 7월부터 진행되었으며, 현재 개발 중입니다. 추후 실시간 등급컷 추정 시스템 및 시험별 전략 제공 기능 제공이 예정되어 있습니다. 웹 개발 트랙 소속입니다.</p><br><br>
 		
 		<h2>트랙별 프로젝트</h2>
 		<ul>
