--- a/circles/academic/key.east/tracks/index.html
+++ b/circles/academic/key.east/tracks/index.html
@@ -37,9 +37,8 @@
 		<p>최근에는 웹 기술의 발전으로, 많은 가치 있는 서비스들이 오프라인 프로그램이 아닌 웹 상에서 제공되고 있습니다.<br>웹 개발 트랙은 학생들에게 웹 개발을 이해하도록 하는 데 초점이 맞추어져 있습니다. 직접 코딩한 HTML 소스를 기반으로 간단한 웹 페이지를 직접 구축하게 함으로써 웹 언어의 기초를 이해하고, CMS를 활용하여 홈페이지를 구축한 다음, 여러 가지 기능을 추가하기 위해 시행착오를 거치면서 웹 개발의 경험을 쌓습니다. 최종적으로는 프로젝트 활동을 통해 학생들에게 꼭 필요한 웹 서비스를 제공하는 것을 목표로 합니다.</p><br><br>
 		<h2>C언어 프로그래밍 Track</h2>
 		<p>C언어는 다른 언어에 비해 기술보다는 논리가 더욱 유용하게 작용하는 프로그래밍 언어입니다. 이러한 특성 때문에 C언어는 다른 언어의 선행 과정으로 배우기에 좋습니다.<br>C언어 프로그래밍 트랙은 학생들이 C언어 프로그래밍을 이해하도록 하는 데 초점이 맞추어져 있습니다. C언어의 기본적인 문법을 익히고, 다양한 문제 풀이를 통해 스스로 몇 가지 알고리즘을 생각하는 능력을 기르게 하며, 여러 가지 알고리즘과 자료구조를 배우고 이를 실제 문제 해결에 적용해 보는 연습을 합니다. 최종적으로는 프로젝트 활동을 통해 학생들에게 유용한 프로그램을 제공하는 것을 목표로 합니다.</p><br><br>
-		<!-- 글 쓰기 귀찮아서 나중에 넣을 것이다아
 		<h2>게임 프로그래밍 Track</h2>
-		<p>학교에서 수업하는 C언어 관련 내용은 실질적인 상용 프로그램 개발과 다소 거리가 있습니다. 이러한 문제를 해결하기 위하여 처음부터 상용 프로그램 개발을 시작할 수 있습니다.<br>상용 프로그램 개발 트랙은 학생들이 스스로 개발하고자 하는 프로그램을 기획하고 이를 실제로 개발해내는 전 과정을 통해 프로그래밍 실력을 키우도록 하는 데 초점이 맞추어져 있습니다. 프로그램을 개발하기 위하여 다양한 언어를 깊이 있게 배우고, 다양한 실험과 시행착오를 통해 이것을 익히며, 실제 개발자들과 같이 여러 가지 프로젝트 개발 방법론을 적용하여 아이디어를 서로 공유하는 능력을 배웁니다. 최종적으로는 사용 가능한 수준의 상용 프로그램을 개발해내는 것을 목표로 합니다.</p><br><br>-->
+		<p>게임을 만드는 일은 게임 기획부터 시작되어야 합니다. 단순히 게임을 만들어내기보다는, 게임의 기획부터 개발, 유지보수의 전 단계를 모두 배울 수 있는 과정이 준비되어 있습니다.<br>게임 프로그래밍 트랙은 학생들이 직접 게임을 기획하고, Unity 엔진을 이용하여 이를 구현하도록 기획되어 있습니다. 코딩은 물론, 리소스의 제작까지 스스로 경험해보는 데 초점이 맞추어져 있습니다. 많은 시행착오를 통해 게임을 제작한 학생들은 코딩의 과정에서 유저의 재미 요소를 더욱 생각하는 게임 개발자가 될 것입니다. 최종적으로는 게임을 만들어내는 것을 목표로 합니다.</p><br><br>
 		<h2>상용 프로그램 개발 Track</h2>
 		<p>학교에서 수업하는 C언어 관련 내용은 실질적인 상용 프로그램 개발과 다소 거리가 있습니다. 이러한 문제를 해결하기 위하여 처음부터 상용 프로그램 개발을 시작할 수 있습니다.<br>상용 프로그램 개발 트랙은 학생들이 스스로 개발하고자 하는 프로그램을 기획하고 이를 실제로 개발해내는 전 과정을 통해 프로그래밍 실력을 키우도록 하는 데 초점이 맞추어져 있습니다. 프로그램을 개발하기 위하여 다양한 언어를 깊이 있게 배우고, 다양한 실험과 시행착오를 통해 이것을 익히며, 실제 개발자들과 같이 여러 가지 프로젝트 개발 방법론을 적용하여 아이디어를 서로 공유하는 능력을 배웁니다. 최종적으로는 사용 가능한 수준의 상용 프로그램을 개발해내는 것을 목표로 합니다.</p><br><br>
 		<h2>정보산업공학 Track</h2>
