--- a/exam/examinfo/index.html
+++ b/exam/examinfo/index.html
@@ -130,7 +130,6 @@ function calc3()
 											<td align=left>
 												<form name="frm1">
 												1학년<br><br>
-												석차등급을 입력하세요<br>
 												수학2 <input type="text" size=10 name="input1">
 												물리2 <input type="text" size=10 name="input2">
 												화학2 <input type="text" size=10 name="input3">
@@ -138,7 +137,7 @@ function calc3()
 												심화지구과학 <input type="text" size=10 name="input5">
 												국어1 <input type="text" size=10 name="input6">
 												영어1 <input type="text" size=10 name="input7">
-												정보 <input type="text" size=10 name="input8">
+												정보 <input type="text" size=10 name="input8"><br>
 												<input type="button" name="btn1" value="평균등급 계산" onclick=calc1()><br><br>
 												<input type="text" size=10 name="result1">
 												</form>
