--- a/circles/academic/key.east/mobile/index.html
+++ b/circles/academic/key.east/mobile/index.html
@@ -37,12 +37,11 @@
 										<header class="major">
 											<h2>반갑습니다, Key.East입니다!</h2>
 										</header>
-										<p>창원과학고등학교 전산동아리 키이스트는 컴퓨터에 관해 관심이 있는 다양한 사람들이 모여 같이 공부하고, 여러 가지 프로젝트를 수행하면서 자신을 성장시키고, 창원과학고등학교 학생들에게 도움이 되는 서비스를 개발하는 창원과학고등학교 최고의 학술 동아리입니다.<Br><Br>현재 커뮤니티 서비스 CSHians를 개발하여 운영하고 있으며, e-learning 서비스, 평가정보서비스, 통합검색 서비스, 자료실, 동아리별 내부전산망 등을 개발하고 있습니다.</p>
+										<p>창원과학고등학교 전산동아리 키이스트는 컴퓨터에 관해 관심이 있는 다양한 사람들이 모여 같이 공부하고, 여러 가지 프로젝트를 수행하면서 자신을 성장시키고, 창원과학고등학교 학생들에게 도움이 되는 서비스를 개발하는 창원과학고등학교 최고의 학술 동아리입니다.<br><br>현재 커뮤니티 서비스 CSHians를 개발하여 운영하고 있으며, e-learning 서비스, 평가정보서비스, 통합검색 서비스, 자료실, 동아리 네트워크 등을 개발하고 있습니다.</p>
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 								</div>
 							</section>
-						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
 									<h2>What We Do</h2>
@@ -65,7 +64,6 @@
 									</li>
 								</ul>
 							</section>
-						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Education</h2>
@@ -90,7 +88,6 @@
 									</li>
 								</ul>
 							</section>
-						<!-- Get Started -->
 						<!--
 							<section id="cta" class="main special">
 								<header class="major">
@@ -114,5 +111,4 @@
 							</ul>
 						</section>
 						<p class="copyright">&copy; 2016 CSHS CS Circle Key.East. All rights reserved.<br>Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</footer>
-			</div></body></html>
+					</footer></div></body></html>
