--- a/circles/academic/key.east/index.html
+++ b/circles/academic/key.east/index.html
@@ -36,7 +36,7 @@
 	</div>
 	<div id="content">
 		<h2>반갑습니다, Key.East입니다!</h2>
-		<p>창원과학고등학교 전산동아리 키이스트는 컴퓨터에 관해 관심이 있는 다양한 사람들이 모여 같이 공부하고, 여러 가지 프로젝트를 수행하면서 자신을 성장시키고, 창원과학고등학교 학생들에게 도움이 되는 서비스를 개발하는 창원과학고등학교 최고의 학술 동아리입니다.<br>현재 커뮤니티 서비스 <a href="http://cshians.net/" style="color:black">CSHians</a>를 개발하여 운영하고 있으며, e-learning 서비스, 평가정보서비스, 통합검색 서비스, 자료실, 동아리별 내부전산망 등을 개발하고 있습니다.<br>&nbsp;</p>
+		<p>창원과학고등학교 전산동아리 키이스트는 컴퓨터에 관해 관심이 있는 다양한 사람들이 모여 같이 공부하고, 여러 가지 프로젝트를 수행하면서 자신을 성장시키고, 창원과학고등학교 학생들에게 도움이 되는 서비스를 개발하는 창원과학고등학교 최고의 학술 동아리입니다.<br>현재 커뮤니티 서비스 <a href="http://cshians.net/" style="color:black">CSHians</a>를 개발하여 운영하고 있으며, e-learning 서비스, 평가정보서비스, 통합검색 서비스, 자료실, 동아리 네트워크 등을 개발하고 있습니다.<br>&nbsp;</p>
 		<div class="register" style="margin-top: 10px; margin-right: 6px; margin-left: 6px; padding: 7px; border: 2px solid #54D014; background-color: #9AF969"><div class="register" style="text-align: left; color: #275D0C; vertical-align: middle;"><p>키이스트 2016 신입회원 가을모집 기간입니다!<br>어떤 학술동아리 소속이라도 키이스트로 이동이 가능합니다.<br>가을모집은 8월 31일까지 진행됩니다. <a href="http://cshians.net/circles/academic/key.east/recruit/" style="color: #275D0C;">온라인 지원서 제출</a></p></div></div>
     	<div style="clear:both"></div>
     	<div style="float:left; margin-right: 10px;"><img src="./key.east_width_squared.png" alt="키이스트 로고타입" style="width:450px;"></div>
